<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.help.sd.uni_con.Course_Activity.add_course_prof_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/courseName"
        android:id="@+id/textView18"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText10"
        android:layout_alignBottom="@+id/textView18"
        android:layout_toRightOf="@+id/textView18"
        android:layout_toEndOf="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description"
        android:id="@+id/textView19"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText11"
        android:layout_below="@+id/textView19"
        android:layout_alignRight="@+id/editText12"
        android:layout_alignEnd="@+id/editText12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/timing"
        android:id="@+id/textView20"
        android:layout_below="@+id/editText11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/editText11"
        android:layout_toRightOf="@+id/textView20"
        android:layout_toEndOf="@+id/textView20"
        android:paddingTop="33dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/click_here"
        android:gravity="top|center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/textView21"
        android:layout_below="@+id/editText11"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:paddingTop="30dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_below="@+id/editText11"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="33dp"
        android:text="@string/click_here" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/days"
        android:id="@+id/textView22"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m"
        android:id="@+id/checkBox"
        android:layout_alignBottom="@+id/textView22"
        android:layout_toRightOf="@+id/textView22"
        android:layout_toEndOf="@+id/textView22"
        android:checked="false"
        android:layout_below="@+id/textView20"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/textView21"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_toRightOf="@+id/checkBox"
        android:layout_toEndOf="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/w"
        android:id="@+id/checkBox3"
        android:layout_alignTop="@+id/checkBox2"
        android:layout_toRightOf="@+id/checkBox2"
        android:layout_toEndOf="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r"
        android:id="@+id/checkBox4"
        android:layout_alignTop="@+id/checkBox3"
        android:layout_toRightOf="@+id/checkBox3"
        android:layout_toEndOf="@+id/checkBox3"
        android:layout_alignBottom="@+id/checkBox3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f"
        android:id="@+id/checkBox5"
        android:layout_alignTop="@+id/checkBox4"
        android:layout_toRightOf="@+id/checkBox4"
        android:layout_toEndOf="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s"
        android:id="@+id/checkBox6"
        android:layout_alignTop="@+id/checkBox5"
        android:layout_toRightOf="@+id/checkBox5"
        android:layout_toEndOf="@+id/checkBox5"
        android:layout_alignBottom="@+id/checkBox5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/address"
        android:id="@+id/textView23"
        android:layout_below="@+id/textView22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/course_code"
        android:id="@+id/textView24"
        android:layout_below="@+id/textView23"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty"
        android:id="@+id/textView25"
        android:layout_alignTop="@+id/textView24"
        android:layout_toEndOf="@+id/textView24"
        android:paddingTop="30dp"
        android:layout_toRightOf="@+id/textView24" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_code"
        android:id="@+id/button7"
        android:background="@color/color_dark"
        android:textColor="@color/color_light"
        android:layout_above="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_course"
        android:id="@+id/button8"
        android:background="@color/color_dark"
        android:textColor="@color/color_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText12"
        android:layout_above="@+id/textView24"
        android:layout_toRightOf="@+id/textView23"
        android:layout_toEndOf="@+id/textView23" />

</RelativeLayout>
