<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.help.sd.uni_con.Home_Activity.add_student_to_course_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/textView27"
        android:layout_marginTop="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/univ_id"
        android:id="@+id/textView28"
        android:layout_below="@+id/textView27"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty"
        android:id="@+id/textView30"
        android:layout_above="@+id/textView28"
        android:layout_toRightOf="@+id/textView27"
        android:layout_toEndOf="@+id/textView27" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty"
        android:id="@+id/textView31"
        android:layout_alignBottom="@+id/textView28"
        android:layout_toRightOf="@+id/textView28"
        android:layout_toEndOf="@+id/textView28" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile"
        android:id="@+id/button9"
        android:layout_above="@+id/button10"
        android:layout_alignRight="@+id/textView31"
        android:layout_alignEnd="@+id/textView31"
        android:layout_marginBottom="81dp"
        android:background="@color/color_dark"
        android:textColor="@color/color_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_course"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="49dp"
        android:background="@color/color_dark"
        android:textColor="@color/color_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty"
        android:id="@+id/textView29"
        android:layout_below="@+id/textView28"
        android:layout_marginTop="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
