<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.help.sd.uni_con.Post_Activity.create_post_Fragment"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView50"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="13dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/empty"
        android:ems="10"
        android:id="@+id/editText13"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView50"
        android:layout_toEndOf="@+id/textView50"
        android:layout_alignBottom="@+id/textView50"
        android:paddingTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/context"
        android:id="@+id/textView51"
        android:layout_below="@+id/textView50"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText14"
        android:layout_below="@+id/textView51"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_post"
        android:id="@+id/button12"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/color_dark"
        android:textColor="@color/color_light"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:id="@+id/button13"
        android:paddingBottom="10dp"
        android:layout_above="@+id/button14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/color_dark"
        android:textColor="@color/color_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:id="@+id/textView52"
        android:layout_above="@+id/button13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category"
        android:id="@+id/textView53"
        android:layout_above="@+id/textView52"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/spinner2" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_above="@+id/textView52"
        android:layout_toRightOf="@+id/textView53"
        android:layout_toEndOf="@+id/textView53"
        android:entries="@array/post_type"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:id="@+id/button14"
        android:layout_above="@+id/button12"
        android:layout_centerHorizontal="true"
        android:background="@color/color_dark"
        android:textColor="@color/color_light"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView7"
        android:layout_below="@+id/editText14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView53" />

</RelativeLayout>
